@@ -294,3 +294,4 @@ But we need the fix for issue #29 first.
 10/03/15-23:20:18: Working on issue #38: Cleaning graph when receiving portfolio started event.
 10/09/15-16:03:57: Working on issue #45: sending message when updated trader weight.
 10/09/15-21:28:44: Fixed bug in currency trader utility computation.
+10/09/15-23:06:40: Working on issue #45: Added unit test for reading of trader weight update.
